# g2_reviews_llm_topic_modeling

./: .gitignore  .langchain.db  .pre-commit-config.yaml  README.md  classification.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_backup.py  streamlit_chunk.py
src/: cluster.py  constants.py  embeddings.py  extract_topic.py  preprocess.py  text_utils.py
